# desktop-org

./: .gitignore  CMakeLists.txt  README.md  build.ps1  crew-manifest.md
include/: auto_sorter.h  config_manager.h  desktop_hooker.h  dialog_helper.h  icon_manager.h  zone_manager.h
src/: auto_sorter.cpp  config_manager.cpp  desktop_hooker.cpp  dialog_helper.cpp  icon_manager.cpp  main.cpp  zone_manager.cpp
tests/: test_auto_sorter.cpp  test_config_manager.cpp  test_zone_manager.cpp  testlist.md
